[Generator][HTTP] Add OpenAI API inference HTTP server for generator, support /chat/completions (#230)
### Motivation and changes

Resolves issue https://github.com/NovaSky-AI/SkyRL/issues/96

Almost identical to the previous PR that was merged to a separate branch
`http-inf_engine-openai` https://github.com/NovaSky-AI/SkyRL/pull/101

This PR adds a FastAPI server wrapper around `InferenceEngineClient`
such that users can perform rollout by posting `/chat/completions`
request to the server's URL, rather than using
`InferenceEngineClient.generate()`. This is helpful for users that want
to train existing agentic frameworks. They can substitute the existing
URL to SkyRL's URL.

To use this feature, simply set the following in the config:
```yaml
generator
  enable_http_endpoint: true
  http_endpoint_host: "127.0.0.1"
  http_endpoint_port: 8000
```

Then you can post requests to
`http://127.0.0.1/800/v1/chat/completions`.

Please refer to `examples/inference_http_endpoint` for example usage.

Note that this PR only supports `/chat/completions`, which inherently
cannot ensure token-in-token-out and re-tokenizes the chat history every
turn and at the very end. We will add `/completions` as a follow up PR
to allow token-in-token-out. We also do not support `tools` as of now,
since the parsing of tools may lose the original model's output string.
Users are responsible for parsing their own tool calls from the model's
response.

### Tests
- Ensured all GPU CI tests passed locally
- Added inference http server GPU tests, and OAI protocol CPU tests
- Compared `run_gsm8k.sh` (uses `SkyRLGymGenerator`) with
`run_gsm8k_with_inference_http_endpoint.sh` (uses
`SkyRLGymHTTPGenerator`, only for demo purpose)

Reward:
<img width="1913" height="686" alt="image"
src="https://github.com/user-attachments/assets/c48969ef-2673-4b46-a756-ef51a2a3b3e1"
/>

Timing:
<img width="1906" height="326" alt="image"
src="https://github.com/user-attachments/assets/24998e35-1505-4933-81ba-9a5f63911f0c"
/

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -77,6 +77,9 @@ dev = [
     "pytest>=6.2.5",
     "pytest-asyncio",
     "pre-commit",
+    "fastapi",
+    "uvicorn",
+    "litellm",
 ]
 docs = [
     "sphinx>=7.0.0",
