--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -51,9 +51,12 @@ conflicts = [
         { extra = "vllm" },
         { extra = "flashrl" },
         { extra = "sglang" },
+    ],
+    [
+        { extra = "flashrl" },
+        { extra = "miniswe" },
     ]
 ]
-override-dependencies = ["openai==1.90.0"] # hack
 
 [tool.uv.sources]
 skyrl-gym = { path = "./skyrl-gym" , editable = true }
@@ -67,7 +70,6 @@ flashinfer-python = [
     { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra =='vllm'" }, 
     { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra == 'sglang' and extra != 'vllm'" }
 ]
-mini-swe-agent = { path = "/home/ray/default/mini-swe-agent" , editable = true }
 
 [project.optional-dependencies]
 deepspeed = [
@@ -114,7 +116,7 @@ flashrl = [
 ]
 miniswe = [
     # TODO (sumanthrh): Shift to mini-swe-agent installed from upstream after merging changes
-    "mini-swe-agent @ git+https://github.com/SumanthRH/mini-swe-agent@add-eval-support",
+    "mini-swe-agent @ git+https://github.com/SumanthRH/mini-swe-agent@minimal-eval-support",
     "litellm",
     "swebench@git+https://github.com/SWE-bench/SWE-bench"
 ]
