[trainer] Initial Megatron TP + PP Support (#223)
# Overview
This PR initializes Megatron support for GRPO with TP + PP (and DP)
supported. We use [mbridge](https://github.com/ISEEKYAN/mbridge) to
translate from huggingface to megatron, and plan to migrate to
[Megatron-Bridge](https://github.com/NVIDIA-NeMo/Megatron-Bridge) once
the repo is more mature and we can safely upgrade some dependencies.

## What's not Included
For a full set of limitations see the code here:
https://github.com/NovaSky-AI/SkyRL/blob/1350d7be6a340587596c91cd1e3854c6900fe3ce/skyrl-train/skyrl_train/utils/utils.py#L117.

Note: there is a known issue with `Qwen2.5-1.5B` and `Qwen2.5-3B`
models, which don't specify `lm_head.weight` in the model.safetensors
file, causing a weight loading issue with `mbridge` - issue here:
https://github.com/ISEEKYAN/mbridge/issues/10.

## Followups
For a full task list needed for full Megatron support, see #203.

## Reproduction runs (gsm8k with Qwen3-0.6B)
<img width="848" height="532" alt="image"
src="https://github.com/user-attachments/assets/8e985969-ac4a-4391-a82e-eb77088eb941"
/>

## TODOs

- [x] Port GPU test to be runnable without locally saved training batch
input
- [x] fix entropy calculation
- [x] dependencies
- [x] add any needed doc-strings
- [x] code-attribution if i missed anything

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
     "debugpy==1.8.0",
     "hf_transfer",
     "wandb",
-    "datasets",
+    "datasets>=3.6.0",
     "tensordict",
     "jaxtyping",
     "skyrl-gym",
@@ -51,6 +51,11 @@ conflicts = [
         { extra = "vllm" },
         { extra = "flashrl" },
         { extra = "sglang" },
+    ],
+    [
+        { extra = "mcore" },
+        { extra = "sglang" },
+        { extra = "flashrl" },
     ]
 ]
 
@@ -101,6 +106,18 @@ sglang = [
     "torch==2.7.1",
     "torchvision",
 ]
+mcore = [
+  # Build transformer-engine separately first!
+  # uv pip install "torch==2.7.1"
+  # uv pip install "nvidia-cudnn-cu12>=9.3"
+  # export CUDNN_PATH="$(python -c 'import inspect, nvidia.cudnn as c, os; print(os.path.dirname(inspect.getfile(c)))')"
+  # export CPATH="$CUDNN_PATH/include:${CPATH:-}"
+  # export LD_LIBRARY_PATH="$CUDNN_PATH/lib:${LD_LIBRARY_PATH:-}"
+  # uv pip install --no-build-isolation "transformer_engine[pytorch]==2.5.0" --verbose
+  "mbridge==0.13.0",
+  "megatron-core@git+https://github.com/NVIDIA/Megatron-LM.git@core_r0.13.0",
+  "transformer-engine[pytorch]==2.5.0",
+]
 flashrl = [
     # TODO (sumanthrh): Shift to install from git source
     # Currently, this is the wheel built for commit 4b04dfc at: https://github.com/SumanthRH/vllm/tree/flashrl
@@ -110,6 +127,7 @@ flashrl = [
     "flashinfer-python",
     "torchvision",
 ]
+
 
 [[tool.uv.index]]
 name = "pytorch-cu128"
