--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -70,6 +70,8 @@ flashinfer-python = [
     { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra =='vllm'" }, 
     { url = "https://download.pytorch.org/whl/cu128/flashinfer/flashinfer_python-0.2.6.post1%2Bcu128torch2.7-cp39-abi3-linux_x86_64.whl", marker = "extra == 'sglang' and extra != 'vllm'" }
 ]
+# mini-swe-agent = { path = "/home/ray/default/mini-swe-agent-fork", editable = true }
+
 
 [project.optional-dependencies]
 deepspeed = [
@@ -116,7 +118,7 @@ flashrl = [
 ]
 miniswe = [
     # TODO (sumanthrh): Shift to mini-swe-agent installed from upstream after merging changes
-    "mini-swe-agent @ git+https://github.com/SumanthRH/mini-swe-agent@minimal-eval-support",
+    "mini-swe-agent @ git+https://github.com/SumanthRH/mini-swe-agent@sumanthrh/r2e",
     "litellm",
 ]
 
