[Algorithms] Add Clip-Cov and KL-Cov loss functions (#251)
# What does this PR do?

Adds Clip-Cov and KL-Cov loss functions based on
https://arxiv.org/pdf/2505.22617


---------

Signed-off-by: SumanthRH <sumanthrh99@gmail.com>

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -97,7 +97,7 @@ trainer:
     # this adds training batch level normalization to advantages
     advantage_batch_normalize: false
     value_head_prefix: "value_head"
-    policy_loss_type: "regular" # "regular", "dual_clip", "gspo", or customizable with PolicyLossRegistry
+    policy_loss_type: "regular" # "regular", "dual_clip", "gspo", "clip_cov", "kl_cov", or customizable with PolicyLossRegistry
     loss_reduction: "token_mean" # "token_mean", "sequence_mean", "seq_mean_token_sum_norm"
     grpo_norm_by_std: true # set to false to disable normalization by std in GRPO
     # GAE parameters
@@ -111,7 +111,7 @@ trainer:
     # Truncated Importance Sampling as proposed in https://fengyao.notion.site/off-policy-rl 
     tis_imp_ratio_cap: -1.0
     use_tis: false
-
+    
     # value loss parameters
     value_clip: 0.2
     normalize_reward: true
@@ -120,6 +120,15 @@ trainer:
       max_sample_batches: 30 # sample at most this many batches before stopping, -1 to sample forever
       min_replace_ratio: 0.3 # minimum proportion of good samples with which to replace bad samples (for replace strategy only)
     
+    # clip-cov parameters (only used when policy_loss_type: "clip_cov"
+    clip_cov:
+      clip_ratio: 0.0002 # fraction of tokens to clip based on covariance
+      clip_cov_lb: 1.0 # lower bound for covariance clipping
+      clip_cov_ub: 5.0 # upper bound for covariance clipping
+    
+    kl_cov:
+      kl_cov_frac: 0.2 # percentage of tokens to apply KL regularization to (20%)
+      ppo_kl_coef: 1.0
 
   gradient_checkpointing: true
   gradient_checkpointing_use_reentrant: false
