[trainer][megatron] Override fused attention with flash-attn when flash_attn=True for Megatron (#265)
# Overview

This PR makes sure that the flash-attn backend is chosen when
flash_attn=True for the Megatron backend. Previously the backend for
TransformerEngine was "auto" and was being overridden in the
[`get_attention_backend` function
](https://github.com/NVIDIA/TransformerEngine/blob/release_v2.5/transformer_engine/pytorch/attention/dot_product_attention/utils.py#L916).

### Speedups (~10x for PP, 5x for TP on the first step)
<img width="1094" height="648" alt="image"
src="https://github.com/user-attachments/assets/4af7d9ff-f314-4cda-b4f1-e6ae19cdc27c"
/>

### Correctness:

avg raw reward is slightly lower with flash-attn
<img width="758" height="328" alt="image"
src="https://github.com/user-attachments/assets/073e1e00-3414-4f95-a7e5-c6b00f1a0c34"
/>

Grad norm is a little lower with flash-attn 
<img width="371" height="322" alt="image"
src="https://github.com/user-attachments/assets/3ca8ff11-4a60-44c4-9f2e-77a63c74295a"
/>

But overall evals seem ok
<img width="1094" height="667" alt="image"
src="https://github.com/user-attachments/assets/7095791b-9e46-4733-9f24-06e07674e7ee"
/>

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -111,6 +111,8 @@ sglang = [
     "torchvision",
 ]
 mcore = [
+  # Make sure to change the flash attention source (under tool.uv.sources) above to a compatible version (<= 2.7.4.post1) for TransformerEngine==2.5.0
+  # https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.7cxx11abiFALSE-cp312-cp312-linux_x86_64.whl
   # Build transformer-engine separately first!
   # uv pip install "torch==2.7.1"
   # uv pip install "nvidia-cudnn-cu12>=9.3"
