--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -2,8 +2,9 @@ defaults:
   - _self_
   - deepspeed_config@deepspeed_config.train: train
   - deepspeed_config@deepspeed_config.eval: eval
-  - megatron_config@megatron_config.policy: policy
-  - megatron_config@megatron_config.ref: ref
+  # <folder_name>@<field_name>.<field_name>: <yaml_file_name>
+  - megatron_config@trainer.policy.megatron_config: policy
+  - megatron_config@trainer.ref.megatron_config: ref
   - skyrl_gym_config: default
 
 data:
@@ -41,7 +42,6 @@ trainer:
       cpu_offload: false # offload params + optimizer state to cpu during fwd pass
       reshard_after_forward: true # fsdp2 only, [True, False, int between 1 and fsdp_size]
       fsdp_size: -1
-    megatron_config: ${megatron_config.policy}
     sequence_parallel_size: 1
     # uses torch compile with logits calculation
     use_torch_compile: false
@@ -50,7 +50,6 @@ trainer:
   ref:
     sequence_parallel_size: 1
     deepspeed_config: ${deepspeed_config.eval}
-    megatron_config: ${megatron_config.ref}
     fsdp_config:
       cpu_offload: true
       reshard_after_forward: true
