--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -120,9 +120,11 @@ mcore = [
   # export CPATH="$CUDNN_PATH/include:${CPATH:-}"
   # export LD_LIBRARY_PATH="$CUDNN_PATH/lib:${LD_LIBRARY_PATH:-}"
   # uv pip install --no-build-isolation "transformer_engine[pytorch]==2.5.0" --verbose
+  #"torch==2.7.1",
+  #"nvidia-cudnn-cu12>=9.3",
   "mbridge==0.13.0",
   "megatron-core@git+https://github.com/NVIDIA/Megatron-LM.git@core_r0.13.0",
-  "transformer-engine[pytorch]==2.5.0",
+  #"transformer-engine[pytorch]==2.5.0",
   "blobfile",
 ]
 flashrl = [
