--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -140,8 +140,7 @@ flashrl = [
 ]
 miniswe = [
     # NOTE (sumanthrh): Needs to be a commit after https://github.com/SWE-agent/mini-swe-agent/commit/4f5d445e99d13b5482478c23508bf2fbf7c0670c
-    # TODO (sumanthrh): Use a release version
-    "mini-swe-agent @ git+https://github.com/SWE-agent/mini-swe-agent",
+    "mini-swe-agent>=1.12.0",
     "litellm",
 ]
 
