--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -14,7 +14,14 @@ dependencies = [
     "optax>=0.2.5",
     "pillow>=11.3.0",
     "safetensors>=0.6.2",
+    "transformers>=4.56.1",
     "typer>=0.17.4",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "torch",
 ]
 
 [tool.setuptools]
