--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -118,16 +118,14 @@ sglang = [
 mcore = [
   # Make sure to change the flash attention source (under tool.uv.sources) above to a compatible version (<= 2.7.4.post1) for TransformerEngine==2.5.0
   # https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.7cxx11abiFALSE-cp312-cp312-linux_x86_64.whl
-  # Build transformer-engine separately first!
+  # For single node: build transformer-engine separately first!
   # uv pip install "torch==2.7.1"
   # uv pip install "nvidia-cudnn-cu12>=9.3"
   # export CUDNN_PATH="$(python -c 'import inspect, nvidia.cudnn as c, os; print(os.path.dirname(inspect.getfile(c)))')"
   # export CPATH="$CUDNN_PATH/include:${CPATH:-}"
   # export LD_LIBRARY_PATH="$CUDNN_PATH/lib:${LD_LIBRARY_PATH:-}"
   # uv pip install --no-build-isolation "transformer_engine[pytorch]==2.5.0" --verbose
-  #"torch==2.7.1",
-  #"nvidia-cudnn-cu12>=9.3",
-  "mbridge==0.13.0",
+  "mbridge==0.13.1",
   "megatron-core@git+https://github.com/NVIDIA/Megatron-LM.git@core_r0.13.0",
   #"transformer-engine[pytorch]==2.5.0",
   "blobfile",
