--- a/skyrl-tx/.github/workflows/pytest.yaml
+++ b/skyrl-tx/.github/workflows/pytest.yaml
@@ -25,3 +25,6 @@ jobs:
     - name: Run pytest
       run: |
         uv run --extra dev pytest -s tests
+    - name: Run a single training step
+      run: |
+        uv run xtrain --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --per-device-batch-size 2 --max-steps 1
