--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "flax>=0.11.2",
     "optax>=0.2.5",
     "pillow>=11.3.0",
+    "rich>=14.1.0",
     "safetensors>=0.6.2",
     "transformers>=4.56.1",
     "typer>=0.17.4",
