Add generic trajectory logging for debugging RL training (#174)
Added a generic TrajectoryLogger system to help debug what's happening
during training. You can now export complete trajectories (prompts,
responses, rewards, etc.) to see exactly what the model is doing.

## Features:
- Base TrajectoryLogger class with WandB and CSV implementations
- Integrated into SkyRLGymGenerator using dependency injection
- Trainer automatically logs trajectories at configurable intervals
during training/eval
- Configurable text truncation and trajectory limits to avoid spamming
logs
- Handles tokenization properly so everything exports as readable text

## Config:
```yaml
generator:
   trajectory_logging:
      enabled: true
      type: "wandb"  # or "csv" 
      max_trajectories: 10
      log_interval: 100
      max_text_length: 2000
```

I also added CSV logging and integration tests so I could test this on
CPU without needing GPU dependencies - not sure if we need to keep those
but they work.

  Fixes #122

--- a/skyrl-train/skyrl_train/config/ppo_base_config.yaml
+++ b/skyrl-train/skyrl_train/config/ppo_base_config.yaml
@@ -234,6 +234,13 @@ generator:
 
   # number of samples per prompt for evaluation
   eval_n_samples_per_prompt: 1
+  
+  # Trajectory logging configuration
+  trajectory_logging:
+    enabled: false  # Set to true to enable trajectory logging
+    type: "wandb"  # Type of logger to use ("wandb" or "csv")
+    max_trajectories: -1  # Maximum number of trajectories to log per batch (-1 for unlimited)
+    output_dir: "${trainer.export_path}/trajectory_logs"  # Output directory for CSV logger
 
   # NOTE (sumanthrh): This flag sets the reward to 0 if the `stop_reason` is not `stop`.
   # This is useful in cases where the LLM generation was truncated or aborted.
