--- a/skyrl-tx/.github/workflows/pytest.yaml
+++ b/skyrl-tx/.github/workflows/pytest.yaml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  CI: 1
+
 permissions:
   contents: read
 
@@ -28,3 +31,4 @@ jobs:
     - name: Run a single training step
       run: |
         uv run tx train --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --per-device-batch-size 2 --max-steps 1
+        uv run tx train --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --per-device-batch-size 2 --max-steps 1 --tp-size 2
