[trainer][megatron] Enable expert model and expert tensor parallel for MoE models (#285)
Enable expert model and expert tensor parallelism for the megatron
backend.

Mostly just plumbing to set this in the call to
`mpu.initialize_parallel_state`.

Adds `SKYRL_PYTHONPATH_EXPORT` flag to optionally export the PYTHONPATH
to allow for the dependencies in the base image to be used (this is
useful for baking TransformerEngine into the base image without
rebuilding it every time when shipping with uv, since the uv local cache
doesn't get shipped, so the single node install instructions no longer
worked).

Working run with EP 8 for Qwen3-30B:
<img width="682" height="552" alt="image"
src="https://github.com/user-attachments/assets/6b354243-1914-4ea5-8e8d-4b5a3380de13"
/>

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
     "debugpy==1.8.0",
     "hf_transfer",
     "wandb",
-    "datasets>=3.6.0",
+    "datasets==4.0.0",
     "tensordict",
     "jaxtyping",
     "skyrl-gym",
@@ -118,16 +118,16 @@ sglang = [
 mcore = [
   # Make sure to change the flash attention source (under tool.uv.sources) above to a compatible version (<= 2.7.4.post1) for TransformerEngine==2.5.0
   # https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.7cxx11abiFALSE-cp312-cp312-linux_x86_64.whl
-  # Build transformer-engine separately first!
+  # For single node: build transformer-engine separately first, and uncomment the transformer-engine library import below
   # uv pip install "torch==2.7.1"
   # uv pip install "nvidia-cudnn-cu12>=9.3"
   # export CUDNN_PATH="$(python -c 'import inspect, nvidia.cudnn as c, os; print(os.path.dirname(inspect.getfile(c)))')"
   # export CPATH="$CUDNN_PATH/include:${CPATH:-}"
   # export LD_LIBRARY_PATH="$CUDNN_PATH/lib:${LD_LIBRARY_PATH:-}"
   # uv pip install --no-build-isolation "transformer_engine[pytorch]==2.5.0" --verbose
-  "mbridge==0.13.0",
+  # "transformer-engine[pytorch]==2.5.0",
+  "mbridge==0.13.1",
   "megatron-core@git+https://github.com/NVIDIA/Megatron-LM.git@core_r0.13.0",
-  "transformer-engine[pytorch]==2.5.0",
 ]
 flashrl = [
     # TODO (sumanthrh): Shift to install from git source
