added pytest-xdist to support -n 0 flag

--- a/skyrl-train/pyproject.toml
+++ b/skyrl-train/pyproject.toml
@@ -86,6 +86,7 @@ dev = [
     "black==24.10.0",
     "pytest>=6.2.5",
     "pytest-asyncio",
+    "pytest-xdist",
     "pre-commit",
     "fastapi",
     "uvicorn",
