--- a/.github/workflows/gpu_ci.yaml
+++ b/.github/workflows/gpu_ci.yaml
@@ -45,6 +45,9 @@ jobs:
         env:
           ANYSCALE_CLI_TOKEN: ${{ secrets.ANYSCALE_CLI_TOKEN }}
           ANYSCALE_HOST: https://console.anyscale.com
+          NCCL_P2P_DISABLE: "1"
+          NCCL_SHM_DISABLE: "1"
+          NCCL_CUMEM_ENABLE: "0"
         run: |
           anyscale job submit -f ci/anyscale_gpu_ci.yaml --timeout 3600
           anyscale job wait --cloud sky-anyscale-aws-us-east-1 --name skyrl-train-gpu-ci --timeout 3600
