Add data loader abstraction and implement chat format (#12)
On a high level, this PR makes it possible to finetune a model on a chat dataset. There are a couple of changes to make this possible:

- Add a flag --load_checkpoint_path to load a pretrained model from a checkpoint path
- Support loading model from sharded checkpoints
- Add a --loader argument to specify how data is being loaded (e.g. for the chat dataset, we need to apply the chat template)
- We also abstracted out the optimizer arguments and the dataset split

--- a/skyrl-tx/.github/workflows/pytest.yaml
+++ b/skyrl-tx/.github/workflows/pytest.yaml
@@ -30,8 +30,11 @@ jobs:
         uv run --extra dev pytest -s tests
     - name: Run a single training step
       run: |
-        uv run tx train --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --per-device-batch-size 2 --max-steps 1
-        uv run tx train --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --per-device-batch-size 2 --max-steps 1 --tp-size 2
+        uv run tx train --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --batch-size 2 --max-steps 1 --optimizer-args '{"learning_rate": 0.002, "weight_decay": 0.1}'
+        uv run tx train --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --batch-size 2 --max-steps 1 --optimizer-args '{"learning_rate": 0.002, "weight_decay": 0.1}' --tp-size 2
+    - name: Run a single fine-tuning step on a chat dataset
+      run: |
+        uv run --with jinja2 tx train --model pcmoritz/qwen3-tiny-test --dataset smangrul/ultrachat-feedback-10k-chatml --output-dir /tmp --batch-size 2 --max-steps 1 --loader tx.loaders.chat --load-checkpoint-path /tmp
     - name: Test experiment tracker integration
       run: |
-        WANDB_MODE=offline WANDB_API_KEY=dummy uv run --with wandb tx train --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --per-device-batch-size 2 --max-steps 1 --tracker wandb --tracker-args '{"name": "Qwen3-8B", "project": "tx"}'
+        WANDB_MODE=offline WANDB_API_KEY=dummy uv run --with wandb tx train --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --batch-size 2 --max-steps 1 --tracker wandb --tracker-args '{"name": "Qwen3-8B", "project": "tx"}'
