--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -10,13 +10,15 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "datasets>=4.0.0",
-    "flax>=0.11.2",
+    "flax==0.11.2",
+    # "jax[cuda12]>=0.7.2",
     "optax>=0.2.5",
     "pillow>=11.3.0",
     "rich>=14.1.0",
     "safetensors>=0.6.2",
     "transformers>=4.56.1",
     "typer>=0.17.4",
+    # "wandb>=0.22.0",
 ]
 
 [project.optional-dependencies]
