--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "datasets>=4.0.0",
-    "flax==0.11.2",
+    "flax>=0.12.0",
     # "jax[cuda12]>=0.7.2",
     "optax>=0.2.5",
     "pillow>=11.3.0",
