[megatron] Enable pass through kwargs to megatron OptimizerConfig (#352)
Per title, adds `optimizer_config_kwargs` to megatron config to enable
additional pass through kwargs to configure the megatron optimizer.

--- a/skyrl-train/skyrl_train/config/megatron_config/policy.yaml
+++ b/skyrl-train/skyrl_train/config/megatron_config/policy.yaml
@@ -20,6 +20,14 @@ torch_profiler_config:
   ranks: []
   save_path: null
 
+# kwargs to override the Megatron OptimizerConfig object
+# any overlapping arguments with those in trainer.policy.optimizer_config will be overridden by the values here
+optimizer_config_kwargs:
+  overlap_cpu_optimizer_d2h_h2d: false
+  use_precision_aware_optimizer: false
+  optimizer_cpu_offload: false
+  optimizer_offload_fraction: 0.0
+
 # kwargs to override the Megatron TransformerConfig object
 transformer_config_kwargs:
   # Recompute config - used for gradient/activation checkpointing
