--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "mkdocs",
+    "mkdocs-material",
     "pytest",
     "torch",
 ]
