--- a/skyrl-tx/mkdocs.yml
+++ b/skyrl-tx/mkdocs.yml
@@ -8,5 +8,7 @@ repo_url: https://github.com/tx-project/tx
 
 nav:
   - "Overview": index.md
+  - "Running":
+    - running/tpus.md
   - "CLI Reference": reference.md
   - "Contributing": contributing.md
