--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+tpu = [
+    "jax[tpu]>=0.7.2",
+]
+
 dev = [
     "mkdocs",
     "mkdocs-material",
