--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -11,7 +11,6 @@ requires-python = ">=3.11"
 dependencies = [
     "datasets>=4.0.0",
     "flax>=0.12.0",
-    # "jax[cuda12]>=0.7.2",
     "optax>=0.2.5",
     "pillow>=11.3.0",
     "rich>=14.1.0",
@@ -22,6 +21,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+gpu = [
+    "jax[cuda12]>=0.7.2",
+]
+
 tpu = [
     "jax[tpu]>=0.7.2",
 ]
