Fix type errors and add type checking in CI (#20)
This PR contains a number of improvements to make the type checking pass and adds the check to the CI so we won't regress. The PR switches from IterableDataset to Dataset since IterableDatasets were never properly supported (since we take the length). We will fix this going forward and add proper support for IterableDatasets too.

--- a/skyrl-tx/.github/workflows/pytest.yaml
+++ b/skyrl-tx/.github/workflows/pytest.yaml
@@ -31,6 +31,9 @@ jobs:
     - name: Run lint
       run: |
         uvx ruff check
+    - name: Run type checking
+      run: |
+        uvx ty check
     - name: Run pytest
       run: |
         uv run --extra dev pytest -s tests
