Add mock tinker API (#27)
This is a very first cut of the API, it is likely that there are mistakes and thing will change. For example currently I'm just setting the future_id to be the same as the request_id, we will see if that holds up.

--- a/skyrl-tx/.github/workflows/pytest.yaml
+++ b/skyrl-tx/.github/workflows/pytest.yaml
@@ -33,10 +33,10 @@ jobs:
         uvx ruff check
     - name: Run type checking
       run: |
-        uvx ty check
+        uv run --extra tinker --extra dev ty check
     - name: Run pytest
       run: |
-        uv run --extra dev pytest -s tests
+        uv run --extra tinker --extra dev pytest -s tests
     - name: Run a single training step
       run: |
         uv run tx train --model pcmoritz/qwen3-tiny-test --dataset mahiatlinux/TinyStories-GPT4-V2-50K-SUBSET --output-dir /tmp --batch-size 2 --max-steps 1 --optimizer-args '{"learning_rate": 0.002, "weight_decay": 0.1}'
