--- a/skyrl-tx/pyproject.toml
+++ b/skyrl-tx/pyproject.toml
@@ -29,11 +29,17 @@ tpu = [
     "jax[tpu]>=0.7.2",
 ]
 
+tinker = [
+    "tinker",
+    "fastapi[standard]",
+]
+
 dev = [
     "mkdocs",
     "mkdocs-material",
     "pytest",
     "torch",
+    "ty",
 ]
 
 [tool.setuptools]
